# ghost_post

./: README.md  db.sqlite3  pyproject.toml
ghost_app/: views.py
ghost_app/migrations/: 0001_initial.py
ghost_app/templates/: index.html  post_form.html
ghostpost/: settings.py  urls.py
